--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,6 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install numpy
         pip install flake8 pytest
         python -m pip install Faker
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
